--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
                 "<node_internals>/**"
             ],
             "preLaunchTask":"tsc: build - tsconfig.json" ,
-            "program": "${workspaceFolder}/src/index.ts",
+            "program": "${workspaceFolder}/src/ts_implementmaps.ts",
             "outFiles": [
                 "${workspaceFolder}/**/*.js"
             ]
